Params wheel and horizontal scroll fix

--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -55,6 +55,7 @@ body {
   overflow-x: hidden;
   height: 100%;
   width: 100%;
+  max-width: 100vw;
   background-color: var(--bg);
   color: var(--color);
   -webkit-transition: background-color 0.5s, color 0.75s;
@@ -70,6 +71,7 @@ body {
   position: absolute;
   z-index: -1;
   width: 100vw;
+  max-width: 100%;
   height: 100%;
   top: 0;
   left: 0;
